# rust-practices

./: README.md
autograd/: Cargo.toml  README.md
autograd/src/: main.rs
expression_evaluation/: Cargo.toml  README
expression_evaluation/logical/: Cargo.toml  README
expression_evaluation/logical/src/: lib.rs
expression_evaluation/numerical/: Cargo.toml  README.md
expression_evaluation/numerical/src/: lib.rs
expression_evaluation/src/: lib.rs  main.rs
minigrep/: README  README.md
minigrep/src/: lib.rs  main.rs
mvcc/src/: main.rs
webserver/: README  README.md  notfound.html  wait.html
webserver/src/: main.rs
webserver/thread_pool/src/: lib.rs
wgpu/: Cargo.toml  README.md
wgpu/src/: lib.rs  main.rs  shader.wgsl  texture.rs
